<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Skeedo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cadreuniao">Cadastro de Reunião</string>
    <string name="reuniaoenderecotxt">Endereço</string>
    <string name="dtreuniaotxt">Data da reunião</string>
    <string name="horarioreuniaotxt">Horário da reunião</string>
    <string name="naocheckboxtxt">Não</string>
    <string name="simcheckboxtxt">Sim</string>
    <string name="despertartxt">Despertar</string>
    <string name="btngravartxt">Gravar</string>
    <string name="title_activity_reuniao_atividade">Cadastro de Reunião</string>
    <string name="desc">Reunião</string>
    <string name="reuniaobtntxt">Agendar Reunião</string>
    <string name="desct">Tarefa</string>
    <string name="tarefabtntxt">Agendar Tarefa</string>
    <string name="txtVisualizarbtn">Listar compromissos</string>
    <string name="listar">Listar</string>
    <string name="sairbuttontxt">Sair</string>
    <string name="title_activity_tarefa_atividade">Cadstro de Tarefas</string>
    <string name="desctxtviewtarefa">Descrição da tarefa</string>
    <string name="txtviewDtTarefa">Data da tarefa</string>
    <string name="title_activity_lista_atividade">Lista de Reuniões</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="tarefasbuttontxt">Listar Tarefas</string>
    <string name="title_activity_reuniao_item_atividade">Reuniao</string>
    <string name="contextitemremovereuniao">Remover Reunião</string>
    <string name="alterar_reuniao">Alterar Reunião</string>
    <string name="inserir_descricao">Inserir Descrição</string>
    <string name="title_activity_reuniao_desc_atividade">Descrição da reunião</string>
    <string name="txteditaendereco">Endereço</string>
    <string name="txteditadtreuniao">Data da Reuniao</string>
    <string name="txteditaHrReuniao">Hora da Reuniao</string>
    <string name="alterarbutton">Alterar</string>
    <string name="title_activity_lista_tarefa_atividade">Tarefas pendentes</string>
    <string name="title_activity_tarefa_item_atividade">Tarefa</string>
    <string name="alterarTarefaContextoMenu">Alterar Tarefa</string>
    <string name="removerTarefaContextoMenu">Remover Tarefa</string>
    <string name="concluirTarefaContextoMenu">Concluir Tarefa</string>
    <string name="txteditaDescTarefa">Descrição da tarefa</string>
    <string name="txteditaDtTarefa">Data da tarefa</string>
    <string name="BtnEditaGRavaT">Alterar</string>
    <string name="txteditaBtnSairT">Sair</string>
    <string name="txtlistreuniao">Listar Reuniões</string>
    <string name="txtListtarefasMain">Listar Tarefas</string>
    <string name="listviewtarefassair">Sair</string>
    <string name="contextLerDesc">Ler descrição</string>
    <string name="notificarcontext">Notificar</string>
    <string name="title_activity_mapas_atividade">MapasAtividade</string>
    <string name="pressionaatela">Pressione aqui para ver as tarefas concluidas</string>
    <string name="varTarefasConcluidas">Ver tarefas concluidas</string>
    <string name="title_activity_lista_tarefas_conluidas">Tarefas Concluidas</string>
    <string name="removertarefaconcluidas">Remover tarefa</string>
    <string name="sairconcluidas">Sair</string>
    <string name="desmarcarconcluidatarefa">Desmarcar concluida</string>
    <string name="enviatarefaemail">Enviar por E-mail</string>
    <string name="emaildestino">Email de Destino</string>
    <string name="salvaremailsetting">Salvar e-mail</string>
    <string name="emailsettingdestino">Email de destino</string>
    <string name="EmailSettings_title">Email de destino</string>
    <string name="infotextemailsettings">Este email ficará guardado no sistema para eventuais envios caso seja necessário enviar informações de tarefas ou reuniões por email, este será o destinatário</string>
    <string name="enviareuniaoemail">Enviar por e-mail</string>

</resources>
