<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.gygaweb.skeedo.MainActivity" >

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/reuniao" />

    <TextView
        android:id="@+id/textViewReuniaobtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageButton1"
        android:layout_alignLeft="@+id/textViewListTarefas"
        android:layout_alignStart="@+id/textViewListTarefas"
        android:layout_marginBottom="14dp"
        android:text="@string/reuniaobtntxt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewListTarefas"
        android:layout_alignStart="@+id/textViewListTarefas"
        android:layout_below="@+id/textViewReuniaobtn"
        android:layout_marginTop="43dp"
        android:text="@string/tarefabtntxt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton1"
        android:layout_alignStart="@+id/imageButton1"
        android:layout_below="@+id/imageButton1"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/desct"
        android:src="@drawable/task" />

    <ImageButton
        android:id="@+id/imageButtonListTarefas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_alignStart="@+id/imageButton2"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/imageButton2"
        android:layout_toRightOf="@+id/imageButton2"
        android:contentDescription="@string/listar"
        android:src="@drawable/listar" />

    <ImageButton
        android:id="@+id/imageButtonListar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageButton1"
        android:layout_alignLeft="@+id/imageButton1"
        android:layout_below="@+id/imageButtonListTarefas"
        android:layout_marginTop="32dp"
        android:layout_toLeftOf="@+id/textViewListTarefas"
        android:layout_toStartOf="@+id/textViewListTarefas"
        android:contentDescription="@string/listar"
        android:src="@drawable/listar" />

    <TextView
        android:id="@+id/textViewListTarefas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/imageButton2"
        android:layout_toRightOf="@+id/imageButton2"
        android:text="@string/txtListtarefasMain" />

    <TextView
        android:id="@+id/textViewlistREuniao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageButtonListar"
        android:layout_marginTop="21dp"
        android:layout_toEndOf="@+id/imageButton2"
        android:layout_toRightOf="@+id/imageButtonListar"
        android:text="@string/txtlistreuniao" />

    <ImageView
        android:id="@+id/imageViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButtonListar"
        android:layout_alignStart="@+id/imageButtonListar"
        android:layout_below="@+id/imageButtonListar"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/emaildestino"
        android:src="@drawable/email" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageViewEmail"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/imageButtonListar"
        android:layout_toRightOf="@+id/imageButtonListar"
        android:text="@string/emaildestino" />
        
</RelativeLayout>
