<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.gygaweb.skeedo.TarefaAtividade" >

    <TextView
        android:id="@+id/textViewEditaEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextDesc"
        android:layout_alignStart="@+id/editTextDesc"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/desctxtviewtarefa" />

    <EditText
        android:id="@+id/editTextDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewEditaEndereco"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textViewDtTarefa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextDtTarefa"
        android:layout_alignStart="@+id/editTextDtTarefa"
        android:layout_below="@+id/editTextDesc"
        android:text="@string/txtviewDtTarefa" />

    <EditText
        android:id="@+id/editTextDtTarefa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextDesc"
        android:layout_alignStart="@+id/editTextDesc"
        android:layout_below="@+id/textViewDtTarefa"
        android:ems="10"
        android:inputType="date" />

    <Button
        android:id="@+id/buttonGravar2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextDtTarefa"
        android:layout_alignStart="@+id/editTextDtTarefa"
        android:layout_below="@+id/editTextDtTarefa"
        android:layout_marginTop="28dp"
        android:text="@string/btngravartxt" />

    <Button
        android:id="@+id/buttonSair2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonGravar2"
        android:layout_alignBottom="@+id/buttonGravar2"
        android:layout_alignRight="@+id/editTextDtTarefa"
        android:layout_alignEnd="@+id/editTextDtTarefa"
        android:text="@string/sairbuttontxt" />

</RelativeLayout>
