<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.gygaweb.skeedo.TarefaItemAtividade" >

    <EditText
        android:id="@+id/editTextEditaDescT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewEditaDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextEditaDescT"
        android:layout_alignLeft="@+id/editTextEditaDescT"
        android:layout_alignStart="@+id/editTextEditaDescT"
        android:layout_marginBottom="40dp"
        android:text="@string/txteditaDescTarefa" />

    <TextView
        android:id="@+id/textViewlistReuniao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextEditaDTT"
        android:layout_alignStart="@+id/editTextEditaDTT"
        android:layout_below="@+id/editTextEditaDescT"
        android:text="@string/txteditaDtTarefa" />

    <EditText
        android:id="@+id/editTextEditaDTT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextEditaDescT"
        android:layout_alignStart="@+id/editTextEditaDescT"
        android:layout_below="@+id/textViewlistReuniao"
        android:ems="10"
        android:inputType="date" />

    <Button
        android:id="@+id/buttonEditaGravaT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextEditaDTT"
        android:layout_alignEnd="@+id/editTextEditaDTT"
        android:layout_below="@+id/editTextEditaDTT"
        android:layout_marginTop="53dp"
        android:text="@string/BtnEditaGRavaT" />

    <Button
        android:id="@+id/buttonEditaSairT"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonEditaGravaT"
        android:layout_alignBottom="@+id/buttonEditaGravaT"
        android:layout_alignLeft="@+id/editTextEditaDTT"
        android:layout_alignStart="@+id/editTextEditaDTT"
        android:text="@string/txteditaBtnSairT" />

</RelativeLayout>
